# dyslang

./: .gitignore  .gitmodules  CMakeLists.txt  dyslang.code-workspace  dyslang.slang  make.bat  makefile
include/dyslang/: dyslang.h  dyslang2.h  platform.h  plugin.h  properties.h  slangc.h
plugin_compiler/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dyslang2.cpp  plugin.cpp  slangc.cpp
tests/: CMakeLists.txt
tests/annotation_rtti/: main.cpp  rtti.slang
tests/annotation_rtti2/: main.cpp
tests/combined_plugins/: bsdf.slang  cube.slang  diffuse.slang  main.cpp  main.slang  shape.slang
tests/dyslang2/: main.cpp  script.slang
tests/load_plugins/: emitter.slang  interface_test.slang  main.cpp  one_plugin.cpp  point.slang  spot.slang  two_plugins.cpp
tests/slang_interface_type_conformance/: interface_from_buffer.slang  main.cpp
